tests/fixtures/valid/loop_break_then_tail.torel
unit fixtures.loop_break_then_tail;

export proc main() -> Int32 {
    loop {
        break;
    }

    42
}
