tests/fixtures/invalid/break_outside_loop.torel
unit fixtures.break_outside_loop;

export proc main() -> Int32 {
    break;
    42
}
